--- a/mdn-site/styles/style.css
+++ b/mdn-site/styles/style.css
@@ -1,4 +1,4 @@
-body{
+body {
   width: 600px;
   margin: 0 auto;
   background-color: #b37400;
@@ -6,56 +6,56 @@ body{
   border: 5px solid black;
 }
 
-p{
+p {
   width: 500px;
   border: 1px solid black;
   color: white;
 }
 
-p,li{
-  font-size:16px;
+p, li {
+  font-size: 16px;
   line-height: 2;
   letter-spacing: 1px;
 }
 
-html{
+html {
   font-size: 20px;
   font-family: 'Newsreader', serif;
   background-color: #000000;
 }
 
-h1{
-    font-size:60px;
-    margin: 0;
-    text-shadow: 3px 3px 1px black;
-    text-align: center;
-    color:#00539F;
-    padding: 20px 0;
+h1 {
+  font-size: 60px;
+  margin: 0;
+  text-shadow: 3px 3px 1px black;
+  text-align: center;
+  color: #00539F;
+  padding: 20px 0;
 }
 
-h3{
+h3 {
   color: white;
 }
 
-ul, ol{
+ul, ol {
   color: yellow;
 }
 
-#my-id{
+#my-id {
   color: firebrick;
 }
 
-.editor-note{
-  color: white;
+.editor-note {
+  color: Purple;
 }
 
-img[src]{
+img[src] {
   border: 1px solid black;
   width: 600px;
   display: block;
   margin: 0 auto;
 }
 
-a:hover{
-  color: black
+a:hover {
+  color: black;
 }
